# video-pipeline

./: .gitignore  README.md  project.example.yml  pyproject.toml
config/caption-styles/: README.md  global.yml
config/glossary/: README.md  global.yml
config/glossary/identities/: dyson-hope.yml  jason-cook-design.yml  sigil-zero.yml
config/safezone/: README.md  reels-9x16.safezone.json
docs/: gui-schema.md  ini-089-overlay.md  phase1.md  phase2.md  phase3.md  phase5.md
remotion/src/: Captions.tsx  Card.tsx  Root.tsx  types.ts
schema/: project.schema.json
src/video_pipeline/: __init__.py  cli.py  glossary.py  manifest.py  project.py
src/video_pipeline/captions/: __init__.py  chunk.py  cue.py  export.py  preview.py  runner.py  style.py
src/video_pipeline/composite/: __init__.py  render.py  runner.py
src/video_pipeline/fcpxml/: __init__.py  document.py  runner.py  timeline.py
src/video_pipeline/overlay/: propose.py
src/video_pipeline/qc/: report.py  runner.py  validate.py
src/video_pipeline/reframe/: __init__.py  crop.py  framing.py  plan.py  probe.py  tracker.py
src/video_pipeline/roughcut/: __init__.py  decision.py  propose.py  (+3 more)
tests/: _util.py  test_capcut.py  test_captions.py  test_composite.py  test_fcpxml.py  test_format_wiring.py  test_framing.py  test_manifest_and_project.py  test_overlay_card.py  test_overlay_cli.py  test_overlay_propose.py  test_overlay_qc.py  test_overlay_rows.py  test_reframe.py  test_reframe_lock_cli.py  test_reframe_split_cli.py  test_rotation.py  test_roughcut.py  test_safezone_generator.py  test_schema.py
(+12 files in other folders)
